--- a/public/modules/instructors/views/create-instructor.client.view.jade
+++ b/public/modules/instructors/views/create-instructor.client.view.jade
@@ -1,3 +1,126 @@
 //
    Created by Jan on 9/6/2015.
 
+section(data-ng-controller='InstructorsController')
+    .page-header
+        h1 New Instructor
+
+    .row
+    // left column
+    .col-md-4.col-sm-6.col-xs-12
+        .text-center
+            img.img-circle(src='http://placehold.it/250x250', alt='avatar')
+            h6 Upload a different photo...
+            input.text-center.center-block.well.well-sm(type='file')
+
+            .btn-group
+                a.btn.btn-success(href='') Save &nbsp;
+                    i.fa.fa-save
+                a.btn.btn-primary(href='') Print &nbsp;
+                    i.fa.fa-print
+
+
+    // edit form column
+    .col-md-8.col-sm-6.col-xs-12
+
+        form(data-ng-submit='create()', novalidate='')
+            fieldset
+                .row
+                    .form-group
+                        .text-danger.text-center(data-ng-show='error')
+                            .alert.alert-danger(role='alert')
+                                //a.panel-close.close(data-dismiss='alert') x
+                                strong(data-ng-bind='error')
+
+                legend.form-group Account Status
+                .form-group
+                    .row
+                        .form-group.col-xs-12.col-md-6
+                            label.sr-only Account Activation Status
+                            select#activationStatus.form-control(name ='activated', data-ng-model='activated', ng-options='opt as opt.label for opt in activatedOptions')
+                                //TODO: add ng-class="{'text-success': activated, 'text-danger': !activated}"
+                                option(value='', disabled='true').selected Select account activation status
+
+                        .form-group.col-xs-12.col-md-6
+                            label.sr-only  Account Verification Status
+                            select#verificationStatus.form-control(name ='verified', data-ng-model='verified', ng-options='opt as opt.label for opt in verifiedOptions')
+                                //TODO: add ng-class="{'text-success': verified, 'text-danger': !verified}"
+                                option(value='', disabled='true').selected Select account verification status
+
+                legend.form-group Contact Information
+                .form-group(style='margin: 0;')
+                    .row
+                        .form-group.col-xs-12.col-md-2
+                            label.sr-only Title
+                            input#title.form-control(type='text', name='title', data-ng-model='title', placeholder='Title')
+
+                        .form-group.col-xs-12.col-md-5
+                            label.sr-only First Name
+                            input#firstName.form-control(type='text', name='firstName', data-ng-model='firstName', placeholder='First Name', required='true')
+
+                        .form-group.col-xs-12.col-md-5
+                            label.sr-only Last Name
+                            input#lastName.form-control(type='text', name='lastName', data-ng-model='lastName', placeholder='Last Name', required='true')
+
+                .form-group
+                    label.sr-only Email (academic)
+                    input#email.form-control(type='email', name='email', data-ng-model='email', placeholder='Email Address (academic)', required='true')
+
+                .form-group
+                    label.sr-only Department
+                    input#department.form-control(type='text', name='department', data-ng-model='department', placeholder='Department', required='true')
+
+                .form-group
+                    label.sr-only Telephone
+                    input#phone.form-control(type='tel', name='phone', data-ng-model='phone', placeholder='Telephone No.', required='true')
+
+                legend.form-group Institution
+                .form-group
+                    label.sr-only Institution Name
+                    input#institution.form-control(type='text', name='institution', data-ng-model='institution', placeholder='Institution Name', required='true')
+
+                .form-group
+                    label.sr-only Type of Institution Select Menu
+                    select#institutionType.form-control(name ='institutionType', data-ng-model='institutionType', required='true') Choose Type of Institution
+                        option(value='', disabled='true').selected Choose Type of Institution
+                        option(value='University') University
+                        option(value='Community College') Community College
+                        option(value='High School') High School
+                        option(value='Middle School') Middle School
+                        option(value='Elementary School') Elementary School
+                        option(value='Corporation') Corporation
+
+                legend.form-group Institution Address
+                .form-group
+                    label.sr-only Address line 1
+                    input#addressLine1.form-control(type='text', name='addressLine1', data-ng-model='addressLine1', placeholder='Address (line 1)', required='true')
+
+                .form-group
+                    label.sr-only Address line 2
+                    input#addressLine2.form-control(type='text', name='addressLine2', data-ng-model='addressLine2', placeholder='Address (line 2 optional)')
+
+                .form-group(style='margin: 0;')
+                    .row
+                        .form-group.col-xs-12.col-md-3
+                            label.sr-only City
+                            input#city.form-control(type='text', name='city', data-ng-model='city', placeholder='City', required='true')
+
+                        .form-group.col-xs-12.col-md-3
+                            label.sr-only State or Province
+                            input#state.form-control(type='text', name='state', data-ng-model='state', placeholder='State or Province', required='true')
+
+                        .form-group.col-xs-12.col-md-3
+                            label.sr-only Postal Code
+                            input#zip.form-control(type='text', name='zip', data-ng-model='zip', placeholder='Zip Code', required='true')
+
+                        .form-group.col-xs-12.col-md-3
+                            label.sr-only Country
+                            input#country.form-control(type='text', name='country', data-ng-model='country', placeholder='Country', required='true')
+
+                .clearfix
+                br
+                .form-group
+                    input.btn.btn-info.btn-lg.btn-block(type='submit')
+
+
+
